src/assets/style/global.sass
// ToDo: Use async load for webfont
@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap')
@import url('https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css')
@import './media.sass'
  
*
  font-family: Questrial, 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic ProN', 'Hiragino Sans', 'Helvetica Neue', Arial, '游ゴシック', 'Yu Gothic', '游ゴシック体', 'YuGothic', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS P Gothic', sans-serif
  font-weight: 400

b, strong
  font-weight: 700

html, body
  width: 100%
  height: 100%
  margin: 0
  scroll-behavior: smooth

figure, figcaption
  margin: 0
  font-size: 14px

a
  color: #06f
  text-decoration: none

p
  line-height: 2em

.flex
  display: flex

.flex-fix
  flex: 0 0 auto

.flex-stretch
  flex: 1 1 auto


.page-fade-enter, .page-fade-leave-to
  opacity: 0

.page-fade-enter-active
  transition: opacity .5s ease

.page-fade-leave-active
  transition: opacity .3s ease

.main-with-margin
  margin: 80px 50px 50px

  @include rmq()
    margin: 50px 25px 25px

.doc
  max-width: 800px
  margin: 30px auto

  .header, .footer
    width: calc(100vw - 50px * 2)
    max-width: 700px
    margin: 60px auto

    @include rmq()
      width: calc(100vw - 25px * 2)

  .header
    margin-top: 100px

    .badge
      font-size: 17px
      font-weight: bold
    
    .title
      font-size: 26px
      font-feature-settings: 'palt'
      line-height: 1.8em

    .info
      font-size: 14px
      color: #888

  .footer
    .gray
      font-size: 14px
      color: #888

.doc
  font-size: 14px
  line-height: 1.8em


  .content-root
    &>*
      width: calc(100vw - 50px * 2)
      max-width: 700px
      margin: 15px auto

      @include rmq()
        width: calc(100vw - 25px * 2)

      &:has(.image-box, .youtube-embed)
        width: 100%
        max-width: none

    .image-box, .youtube-embed
      margin: 40px auto

      @include rmq()
        margin: 30px 0

    h2
      margin-top: 90px
      font-size: 1.5em

    h3
      margin-top: 60px
      font-size: 1.2em

    & > ul, & > ol
      margin: 30px auto
      padding: 0
      list-style-position: inside

    li
      margin: .3em 0

      ul, ol
        margin: 0

    blockquote
      background-color: #efefef
      margin: 30px 50px
      padding: 20px 30px

      @include rmq()
        margin: 30px 25px

      *
        max-width: 100%

